# luci-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: README.md  binary-trees.luci  fannkuchredux.luci  nbody.luci  nbody2.luci
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/source/: chapter-1.html  chapter-2.html  chapter-3.html  chapter-4.html
docs/source/: chapter-1.rst  chapter-2.rst  chapter-3.rst  chapter-4.rst
examples/: README.md  if_test_scope.luci  local_let.luci  range_apply.luci  recursion_ex_1.luci  return_scope.luci  while_test_scope.luci
explorations/: CMakeLists.txt  SortBug.cpp
interp/: Analyze.cpp  Ast.cpp  Ast.h  CMakeLists.txt  EvalTest.cpp  Evaluator.cpp  Evaluator.h  Interp.cpp  Lex.cpp  Lexer.cpp  Lexer.h  LexerTest.cpp  Object.cpp  Object.h  Parse.cpp  Parser.cpp  Parser.h  ParserTest.cpp  Token.cpp  Token.h  Typing.cpp  Typing.h  Util.cpp  Util.h  Version.cpp  Version.h
interp/builtin/: Array.cpp  Array.h  Dictionary.cpp  Dictionary.h  Error.cpp  Error.h  ErrorType.cpp  ErrorType.h  Freeze.cpp  Freeze.h  IO.cpp  IO.h  Json.cpp  Json.h  Math.cpp  Math.h  OS.cpp  OS.h  Regex.cpp  Regex.h  Set.cpp  Set.h  String.cpp  String.h  Thread.cpp  Thread.h  Threading.cpp  Threading.h  Time.cpp  Time.h  Typing.cpp  Typing.h
interp/format/: Format.cpp  Format.h
tests/: array_comparisons.luci  array_double_complex.luci  array_operations.luci  assignment_references.luci  blocks.luci  blocks_simple.luci  builtin_members.luci  builtin_type_str.luci  cloning.luci  custom_types.luci  custom_types_con_destruct.luci  custom_types_con_destruct_incr.luci  custom_types_orig.luci  dictionary_operations.luci  doc_strings.luci  exception_handling.luci  file_operations.luci  for_loop.luci  for_loop_continue.luci  format.luci  freezing.luci  function_expressions.luci  iter.luci  json.luci  operators.luci  os.luci  range.luci  references.luci  references_inplace_operators.luci  regex.luci  run_tests.luci  scope_tests.luci  set_operations.luci  set_operations_frozen.luci  set_operations_non_trivial.luci  sort.luci  sort_crash.luci  string_operations.luci  test_module.luci  test_modules.luci  (+2 more)
tests/test_module/: test_sub_module.luci
tests_analysis/: array.luci  array.luci.types  basic.luci  basic.luci.types  basic_functions.luci  basic_functions.luci.types  custom_types.luci  custom_types.luci.types  dictionary.luci  dictionary.luci.types  for.luci  for.luci.types  function_return.luci  function_return.luci.types  function_return_2.luci  function_return_3.luci  function_return_4.luci  operations.luci  operations.luci.types  ranges.luci  ranges.luci.types  run_tests.luci  scope.luci  scope.luci.types  test_help.luci  types.luci.types  unreachable_code.luci  unreachable_code.luci.types
